<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="167dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/change_server_address"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold|italic"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/server_url"
         />

    <EditText
        android:id="@+id/server_url"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textUri"
        android:text="@string/server_address"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:autofillHints="Enter server address"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="?attr/actionModeSplitBackground"
        android:onClick="joinMeet"
        android:text="@string/join_string"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/meet_name"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/meet_name"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/meet_id"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView3"
        android:autofillHints="Enter meet ID"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/change_meet_id"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold|italic"
        android:layout_below="@id/server_url"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/meet_name"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_string"
        android:layout_marginTop="64dp"
        android:onClick="returnActivity"
        android:layout_below="@id/button3"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
</ScrollView>